--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,10 @@ timm==1.0.8
 openai==1.40.3 
 lmdeploy[all]==0.5.3
 hydra-core==1.3.2
+## agent used
+llama-index
+llama-index-core
+llama-index-llms-huggingface
+llama-index-embeddings-huggingface
+llama-index-llms-siliconflow
+llama-index-embeddings-siliconflow
